# Shaft-Power-Meter

./: .gitignore  heartbeat_snapshot_1754935942.json  heartbeat_snapshot_1754936618.json  heartbeat_snapshot_1754936797.json  heartbeat_snapshot_1754938283.json  heartbeat_snapshot_1754938863.json  main.db  main.py  package.bat  pyproject.toml  requirements.txt  test.py
demo/: demo_001_window.py  demo_002_button.py  demo_003_theme.py  demo_004_custom_style.py  demo_005_label_input.py  demo_006_layout_grid.py  demo_007_layout_pack.py  demo_008_tabs.py  demo_009_login.py  demo_010_color_pick.py  demo_011_dropdown.py  demo_012_progress.py  demo_013_meter.py  demo_014_message_and_dialog.py  demo_015_custom_theme.py  demo_016_responsive_layout.py  demo_017_custom_meter.py
logs/: info.log.2025-04-28
src/: debug.py  main.py  ui_safety.py
src/common/: const_alarm_type.py  const_pubsub_topic.py  control_manager.py  global_data.py  operation_type.py  public_controls.py
src/const/: pubsub_topic.py
src/database/: __init__.py  base.py
src/db/: 988bbc4fc383  988bbc4fc383-journal  base.py  data_init.py  table_init.py
src/jm3846/: JM3846_0x03.py  JM3846_0x44.py  JM3846_0x45.py  JM3846_calculator.py  JM3846_client.py  JM3846_data_handler.py  JM3846_data_handler_for_15s.py  JM3846_data_handler_for_1s.py  JM3846_data_handler_for_ns.py  JM3846_thrust.py  JM3846_thrust_util.py  JM3846_torque_rpm.py  JM3846_torque_rpm_util.py  JM3846_util.py
src/stimulation/: gps_server.py  index.py  modbus_client.py  modbus_server.py  (+1 more)
test/: ModbusFletApp.py
tests/: __init__.py
(+373 files in other folders)
